--- a/src/screens/list/index.css
+++ b/src/screens/list/index.css
@@ -1,31 +1,57 @@
 .list-screen-container {
   display: flex;
-  background-color: rgb(135, 173, 231);
+  width: 100vw;
+  height: 100vh;
+  background-color: #7785db;
   align-items: center;
   justify-content: center;
-  height: 100vh;
-  width: 100vw;
 }
 
 .list-screen-content-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 1128px;
-  height: 824px;
+  align-items: flex-start;
+  justify-content: flex-start;
+  width: 60vw;
+  height: 84vh;
   background-color: white;
   border-radius: 24px;
-  border-color: black;
-  border-width: 2px;
+  padding: 24px;
+  overflow: hidden;
 }
+
 .list-screen-header {
   display: flex;
+  width: 100%;
   flex-direction: row;
-  align-self: center;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.list-screen-title-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.list-screen-header-title {
+  font-size: 32px;
+  margin-left: 12px;
+}
+
+.list-screen-header-button-container {
+  width: 160px;
 }
 
 .logo-image {
   width: 72px;
-  height: 72 px;
+  height: 72px;
+}
+
+.list-screen-list-container {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
 }
