--- a/src/components/Button/index.css
+++ b/src/components/Button/index.css
@@ -10,3 +10,20 @@
   border: 0px;
   cursor: pointer;
 }
+
+.main {
+  background-color: rgb(89, 127, 209);
+  color: white;
+}
+
+.outline {
+  background-color: white;
+  color: rgb(89, 127, 209);
+}
+
+.button-icon {
+  height: 24px;
+  width: 24px;
+  object-fit: contain;
+  margin-right: 6px;
+}
