--- a/src/components/Button/index.css
+++ b/src/components/Button/index.css
@@ -11,6 +11,12 @@
   cursor: pointer;
 }
 
+@media screen and (max-width: 420px) {
+  .button-container {
+    max-width: 300px;
+  }
+}
+
 .main {
   background-color: rgb(89, 127, 209);
   color: white;
