--- a/src/index.css
+++ b/src/index.css
@@ -53,6 +53,15 @@ h3 {
   color: lightgrey;
 }
 
+@media screen and (max-width: 420px) {
+  h1 {
+    font-size: 18px;
+  }
+  h3 {
+    font-size: 12px;
+  }
+}
+
 ::-webkit-scrollbar {
   width: 0px;
   visibility: hidden;
