--- a/src/screens/list/index.css
+++ b/src/screens/list/index.css
@@ -55,3 +55,20 @@
   align-items: center;
   justify-content: center;
 }
+
+@media screen and (max-width: 420px) {
+  .list-screen-header-title {
+    font-size: 16px;
+    line-height: 12px;
+  }
+  .logo-image {
+    width: 34px;
+    height: auto;
+  }
+  .list-screen-content-container {
+    width: 72vw;
+  }
+  .list-screen-header-button-container {
+    width: 36px;
+  }
+}
