--- a/src/components/Input/index.css
+++ b/src/components/Input/index.css
@@ -13,6 +13,12 @@
   margin-bottom: 16px;
 }
 
+@media screen and (max-width: 420px) {
+  .input-container {
+    max-width: 300px;
+  }
+}
+
 .input-label {
   font-size: 12px;
   margin: 0px;
