--- a/src/screens/home/index.css
+++ b/src/screens/home/index.css
@@ -20,6 +20,18 @@
   border-width: 2px;
 }
 
+@media screen and (max-width: 420px) {
+  .home-screen-content-container {
+    max-width: 320px;
+    max-height: 600px;
+    padding: 12px;
+  }
+  .shopping-bag-image {
+    width: 120px;
+    height: auto;
+  }
+}
+
 .shopping-bag-image {
   width: 220px;
   height: 220px;
@@ -27,4 +39,11 @@
 
 .home-screen-form-container {
   width: 452px;
+}
+
+@media screen and (max-width: 820px) {
+  .home-screen-container {
+    overflow-x: hidden;
+    overflow-y: hidden;
+  }
 }
